# orange-hrm-robotframework

./: .env  .flake8  .pre-commit-config.yaml  .pylintrc  README.md  index.html  log.html  output.xml  pyproject.toml  report.html  run_robot_tests.py
.github/workflows/: main-branch-deployment.yml
PageObject/KeywordDefinitionFiles/: Common.resource  Common.robot  Dashboard.resource  Dashboard.robot  Login.resource  Login.robot
PageObject/Locators/: Locators.py
PageObject/TestData/: Testdata.py
Tests/: Login.robot
