[project]
name = "orange-hrm-robotframework"
version = "1.0.0"
description = ""
authors = [
    {name = "Mateo Agudelo Garcia",email = "mateo.agudelo80@eia.edu.co"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [
    {include = "PageObject"}
]

[tool.poetry.group.dev.dependencies]
robotframework = "^7.2.2"
pre-commit = "^4.1.0"
pylint = "^3.3.5"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
